# Finanzmathematik

./: M&A  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js
aketheon_copula/: __init__.py  cli.py  copula.py  marginals.py  viz.py
src/: App.jsx  PhishingDetector.jsx  main.jsx  styles.css
tests/: test_copula.py  test_marginals.py
