[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aketheon-copula"
version = "0.1.0"
description = "Gaussian copula simulation for revenue growth and margins."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aketheon Analytics"}
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aketheon_copula*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
